[package]
name = "autofill_parser"
version = "0.5.0"
edition = "2021"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
lazy_static = "1.4" # Or once_cell, lazy_static is fine for this.
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.35.2"
rayon = "1.8"
